--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "url_machine",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://sihao-law.github.io/url_machine",
   "dependencies": {
     "antd": "^3.22.2",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
